fix errors with error messages and overflow of text in dynamix tweet box

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -21,7 +21,7 @@
 
 @media only screen and (min-width: 1024px) {
   .main-header {
-    width: 50%;
+    width: 40%;
     top: 120px;
     margin: 50px 20px 50px 50px;
   }
