--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -25,7 +25,7 @@ body {
 }
 
 .container {
-  width: 100%;
+  width: 80%;
   display: flex;
   position: relative;
   flex-direction: column;
@@ -65,5 +65,9 @@ body {
   }
   .container {
     top: 130px;
+    width: 60%;
+    border: 1px solid green;
+    align-items: flex-start;
+    padding-left: 60px;
   }
 }
