--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,10 +1,14 @@
 .new-tweet {
-  width: 80%;
+  width: 90%;
 }
 
 .tweet-form {
   display: flex;
   flex-direction: column;
+}
+
+#error-msg {
+  display: none;
 }
 
 #error-msg p {
@@ -57,14 +61,19 @@
 }
 
 .tweet-container {
-  width: 80%;
+  width: 90%;
   margin: 50px 0;
+  overflow: scroll;
 }
 
 article.tweet {
   border: 3px solid #545149;
   padding: 15px;
+  right: 0;
   margin-bottom: 50px;
+  word-wrap: break-word;
+  hyphens: manual;
+  display: block;
 }
 
 article.tweet:hover {
@@ -137,3 +146,4 @@ article.tweet footer #icons i {
 article.tweet footer #icons i:hover {
   color: #dcb02b;
 }
+
